DOC-2300: Replace/rename Advanced Templates with Template in TinyMCE 7.0 docs. (#3120)
* DOC-2300: Replace/rename Advanced Templates with Template in TinyMCE 7x docs.

* Update modules/ROOT/pages/advanced-templates.adoc

* Update modules/ROOT/pages/advanced-templates.adoc

* Update modules/ROOT/nav.adoc

* Update modules/ROOT/partials/index-pages/premium-plugins.adoc

* Update modules/ROOT/pages/mergetags.adoc

* Update modules/ROOT/pages/mergetags.adoc

* Update modules/ROOT/pages/available-toolbar-buttons.adoc

* Update modules/ROOT/pages/advanced-templates.adoc

* DOC-2230: replace templates with productname in specific sections.

* Update modules/ROOT/pages/mergetags.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/partials/index-pages/premium-plugins.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/mergetags.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/advanced-templates.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/examples/live-demos/full-featured/index.html

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/advanced-templates.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/examples/live-demos/full-featured/index.html

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

---------

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -17,7 +17,13 @@ How to setup {productname}’s Advanced Code Editor plugin.
 
 a|
 [.lead]
-xref:advanced-templates.adoc[Advanced Templates]
+xref:advtable.adoc[Advanced Tables]
+
+Add advanced functionality to tables.
+
+a|
+[.lead]
+xref:advanced-templates.adoc[Templates]
 
 Create and edit complex templates in {productname} for use with {productname}.
 
@@ -146,6 +152,12 @@ a|
 xref:autocorrect.adoc[Spelling Autocorrect]
 
 Add autocorrection of common typos and spelling errors as well as capitalization correction to {productname}.
+
+a|
+[.lead]
+xref:advanced-templates.adoc[Templates]
+
+Create and edit complex templates in {productname}.
 
 a|
 [.lead]
