--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -287,6 +287,7 @@
 ** Premium plugins
 *** xref:a11ychecker.adoc[Accessibility Checker]
 *** xref:advcode.adoc[Advanced Code Editor]
+*** xref:advtable.adoc[Advanced Tables]
 *** xref:advanced-templates.adoc[Advanced Templates]
 *** xref:advanced-typography.adoc[Advanced Typography]
 *** xref:ai.adoc[AI Assistant]
@@ -327,6 +328,7 @@
 **** xref:custom-dictionaries-for-tiny-spellchecker.adoc[Adding custom dictionaries]
 *** xref:autocorrect.adoc[Spelling Autocorrect]
 *** xref:tableofcontents.adoc[Table of Contents]
+*** xref:advanced-templates.adoc[Templates]
 *** Tiny Drive
 **** xref:tinydrive-introduction.adoc[Introduction]
 **** xref:tinydrive-getting-started.adoc[Getting started]
