--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -88,6 +88,18 @@ The {productname} <x.y[.z]> release includes an accompanying release of the **<P
 
 For information on the **<Premium plugin name 1>** plugin, see: xref:<plugincode>.adoc[<Premium plugin name 1>].
 
+=== Templates
+
+The {productname} 7.0 release includes an accompanying release of the **Templates** premium plugin.
+
+**Templates** includes the following fixes, additions, and improvements.
+
+==== Missing tooltip for category and template three dots menu button in the **Templates** dialog
+//# TINY-10615
+
+Previously, the three dots menu button for category and template in the **Templates** dialog were missing a tooltip, making them inaccessible.
+
+In {productname} 7.0, the three dot menu buttons for categories and templates in the Templates dialog now have informative tooltips. This clarifies their purpose for all users, enhancing discoverability and improving the overall experience, especially for those relying on assistive technologies.
 
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium plugin end-of-life announcement
