DOC-2284: Update revision history doc template

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -1,8 +1,8 @@
 = Revision History Plugin
 :navtitle: Revision History
-:description: A view that allows {productname} users to view historical snapshots of saved revisions of the document, giving them the option to select a previous version to replace the editors content.
-:description_short: View containing historial snapshots of previous editor states.
-:keywords: plugin, Revision History, changes, history, track, restore.
+:description: A view that allows {productname} users to see historical snapshots of a document with differences being highlighted and ability to revert the current content to a version
+:description_short: View containing historical snapshots of a document.
+:keywords: plugin, Revision History, changes, history, track, revert
 :pluginname: Revision History
 :plugincode: revisionhistory
 :plugincategory: premium
@@ -17,22 +17,55 @@ include::partial$misc/admon-iframe-only.adoc[]
 
 
 // TODO: Add an introduction. What does the plugin do? Why would I use this plugin? Keep it concise.
+The plugin helps you to see how your document has changes over time. You can also restore an earlier version.
 
 == Using the Revision History plugin
 
-// TODO
-
-=== Setup
-
-// TODO: @ben what do we need to cover here
+=== Interactive example
 
 === How it works
 
-// TODO: @ben placeholder to outline all the details.
+The revision history view can be accessed by clicking on the `revisionhistory` toolbar or menu button which locates under `View` menu.
 
-=== What revision history handles
+The revision history view composes of these UI components:
+- Header toolbar shows the date of the selected revision and contains `Restore this version` and `Close` buttons. Clicking `Restore this version` will set the editor's content to the selected version and close the view. `Close` button will close brings the user's back to the editor.
+- Diff view is readonly view to show the differences between two versions. These differences are highlighted with colors to indicate the types of changes being applied: red: removed, green: added and blue: modified
+- Revisions list renders the fetched revisions as selectable cards. When a card/revision is selected, the diff view is updated to show the difference between the selected version and the closest one, which is below the selected version. There are additional revisions added to this list depending on the scenarios, which is detailed in this section: <How initial content and current content are listed>
 
+=== Understanding versions
+A new document, that has no saved versions, always has at max two versions: the initial version and current version. 
+
+- Initial version is created on {productname} `Loaded` event to capture the content initialized with the editor
+- Current version is added on opening the {pluginname} with the editor's current content. If included, it is always be the latest version and put at the top
+
+If both versions are the same, {pluginname} only shows the current version.
+
+When a document has saved versions, its initial version is discarded as the {pluginname} assumes it is in the saved versions. The current version is always discarded if it matches to the closest version or the latest saved version.
+
+The below table summaries how the initial and current versions are handled in the {pluginname}:
+[cols="1,,1,2",options="header"]
+|===
+|Initial version |Diff current version |Has saved versions |Expect
+|No |No |No |No revisions is shown |
+|Yes |No |No |Only shows current version |
+|Yes |Yes |No |Both initial and current version are shown |
+|Yes |Yes |Yes |Shows the saved versions including the current version |
+|Yes |No |Yes |As above if the current version doesn't exist. Otherwise, only shows saved versions |
+|No |Yes |Yes |As above |
+|No |No |Yes |Only show the saved versions|
+|===
+
+[NOTE]
+`Diff current version` means whether the current version is different than the initial version. When the editor is loaded with content, the two versions are the same.
+
+== What content is supported and not supported
 // TODO: Insert template that clearly identifies what is and what is not handled when using the plugin.
+- Content that is annotated by plugins: ie: comments
+- Code in code block is not well diff. However it should annotate attributes changes. ie styles
+- Custom elements
+- Content or custom elements that their visual presentation are provided by a plugin or custom handling. ie: pagebreak, comments, etc.. If the visual presentation can be addressed by CSS then it is up to the integrators to provide that via `revisionhistory_css_url` option
+
+
 
 == Basic setup
 
@@ -42,19 +75,31 @@ To setup the {pluginname} plugin user-interface in the editor:
 
 * add `{plugincode}` to the `toolbar` option in the editor configuration;
 
+* add `{plugincode}_fetch` option to the editor configuration;
+
+// option that must return a promise which resolved to a list of  revisions. It is **recommended** that the revisions should be sorted by chronological order since the users could only identify a revision by its date. A revision object is expected to have the following structure this <LInk to data structure>.
+// {
+
+// }
+
 For example:
 
 [source,js]
 ----
 tinymce.init({
-  selector: 'textarea',  // change this value according to your html
+  selector: 'textarea',  // change this value according to your HTML
   plugins: 'revisionhistory',
   toolbar: 'revisionhistory',
-  revisionhistory_fetch: fetch('/revisionhistory'), // change this value to your endpoint for fetching the revision history
+  // Required
+  revisionhistory_fetch: () => new Promise((resolve) => {
+    // Make an API request to fetch revisions
+    const revisions = [];
+    resolve(revisions);
+  });
 });
 ----
 
-NOTE: The undefined options in the above example must be defined. See the xref:options[Options] below for specific details on each function.
+// NOTE: The undefined options in the above example must be defined. See the xref:options[Options] below for specific details on each function.
 
 
 == Interactive example
