DOC-2238: TinyMCE 7 now GPL licensed, with updated documentation reflecting this change.

--- a/modules/ROOT/pages/invalid-api-key.adoc
+++ b/modules/ROOT/pages/invalid-api-key.adoc
@@ -1,3 +1,4 @@
+
 = Invalid API key
 :description_short: Fixing the invalid API key error | {productname}
 :description: Learn why you’re receiving an invalid {productname} API key error notification, and how to fix the issue.
@@ -30,7 +31,7 @@ We require an API key for all {productname} editors on our cloud platform in ord
 
 {productname} can be accessed through a variety of licensing and hosting methods, including both free and paid options. 
 
-The free, open source option for {productname} is available under an MIT license explained https://www.tiny.cloud/legal/tiny-self-hosted-oem-saas-agreement/[here]. Users must self-host {productname} to take advantage of the MIT license. **This type of license does not require an API key**.
+The free, open source option for {productname} is available under the _GNU General Public License Version 2 or later_. Users must self-host {productname} to take advantage of the open source license. **This type of license does not require an API key**.
 
 The cloud hosted option for {productname} is available under commercial license, as described https://www.tiny.cloud/legal/cloud-use-subscription-agreement/[here]. **This type of license requires an active API key.**
 
@@ -60,7 +61,7 @@ You can view the list of approved domains by logging into https://www.tiny.cloud
 
 == I would prefer to self-host {productname}. What are my options?
 
-* If you plan to use only open-source {productname} features, the open-source version is available under the MIT license.
+* If you plan to use only open-source {productname} features, the open-source version is available under the _GNU General Public License Version 2 or later license_.
 * If you want to self-host {productname} and use our Premium features, https://www.tiny.cloud/contact/[get in touch with our Sales team] for a custom quote.
 
 TIP: For additional information on Troubleshooting Tiny Cloud visit: xref:cloud-troubleshooting.adoc[Cloud Troubleshooting].
