--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -368,9 +368,9 @@ As a result, users no longer experience unexpected list insertions.
 
 Previously, the `ch` configuration property was used to specify the character that would trigger the autocompleter.
 
-This property was deprecated in https://www.tiny.cloud/docs/tinymce/latest/6.2-release-notes/#deprecated[{productname} 6.2] and has been removed in {productname} 7.0. Instead, use the `trigger` property to specify the `string` that will trigger the autocompleter.
+This property was deprecated in link:https://www.tiny.cloud/docs/tinymce/6/6.2-release-notes/#deprecated[{productname} 6.2] and has been removed in {productname} 7.0. Instead, use the `trigger` property to specify the `string` that will trigger the autocompleter.
 
-If you previously used `+editor.ui.registry.addAutocompleter(name, options)+` in your configuration, then update your configuration from `ch: '<string>',` to `trigger: '<string>',`.
+If `+editor.ui.registry.addAutocompleter(name, options)+` was used  in your configuration, updating your configuration from `ch: '<string>',` to `trigger: '<string>',` is required.
 
 NOTE: The new `trigger` option can handle multiple character strings as the trigger.
 
