--- a/modules/ROOT/pages/markdown.adoc
+++ b/modules/ROOT/pages/markdown.adoc
@@ -45,7 +45,7 @@ For example:
 ----
 tinymce.init({
   selector: 'textarea',  // change this value according to your html
-  plugins: "markdown",
+  plugins: 'markdown',
 });
 ----
 
