add release note entry for TINY-8929: The autocompleter `ch` configuration property has been removed. Use the `trigger` property instead. (#3146)
* add release note entry for TINY-8929: The autocompleter `ch` configuration property has been removed. Use the `trigger` property instead.

* Apply suggestions from code review

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

* Update modules/ROOT/pages/7.0-release-notes.adoc

---------

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -378,6 +378,19 @@ This resulted in undefined browser behavior due to the inherent list code within
 
 As a result, users no longer experience unexpected list insertions.
 
+=== The autocompleter `ch` configuration property has been removed. Use the `trigger` property instead.
+// #TINY-8929
+
+Previously, the `ch` configuration property was used to specify the character that would trigger the autocompleter.
+
+This property was deprecated in link:https://www.tiny.cloud/docs/tinymce/6/6.2-release-notes/#deprecated[{productname} 6.2] and has been removed in {productname} 7.0. Instead, use the `trigger` property to specify the `string` that will trigger the autocompleter.
+
+If `+editor.ui.registry.addAutocompleter(name, options)+` was used in your configuration, updating your configuration from `ch: '<string>',` to `trigger: '<string>',` is required.
+
+NOTE: The new `trigger` option can handle multiple character strings as the trigger.
+
+For more information, visit the updated xref:autocompleter.adoc[Autocompleter] documentation.
+
 [[bug-fixes]]
 == Bug fixes
 
