--- a/modules/ROOT/partials/misc/advcode-shortcuts.adoc
+++ b/modules/ROOT/partials/misc/advcode-shortcuts.adoc
@@ -18,5 +18,19 @@ Enhanced Code Editor provides the following shortcuts within the code dialog.
 |Select Next Occurrence |Ctrl+D |Command+D 
 |Select Next Occurrence (Atom) |Ctrl+B |Command+B 
 |Fold Code |Ctrl+Q |Command+Q+Fn
-|Accept Completion |Tab |Tab 
+|=== 
+| Action | Windows Shortcut | macOS Shortcut
+| Find | Ctrl+F | Command+F
+| Replace | Ctrl+H | Command+Option+F
+| Replace All | Shift+Ctrl+R | Shift+Command+Option+F
+| Find Next | F3 | F3
+| Find Previous | Shift+F3 | Shift+F3
+| Close Search Panel | Esc | Esc
+| Fold Code | Ctrl-Shift-[ | Command-Option-[
+| Unfold Code | Ctrl-Shift-] | Command-Option-]
+| Fold All | Ctrl-Alt-[ | Ctrl-Option-[
+| Unfold All | Ctrl-Alt-] | Ctrl-Option-]
+| Accept Completion | Enter | Enter
+|=== 
+
 |===
