--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -153,6 +153,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 :plugincode: image
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Import from Word
+:plugincode: importword
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Insert Date/Time
 :plugincode: insertdatetime
