--- a/modules/ROOT/partials/commands/importword-cmds.adoc
+++ b/modules/ROOT/partials/commands/importword-cmds.adoc
@@ -9,3 +9,6 @@
 ----
 tinymce.activeEditor.execCommand('ImportWord');
 ----
+
+[NOTE]
+To activate the `ImportWord` command, users are required to click on the "Import to Word" button. Upon clicking the button, the `ImportWord` command is triggered.
