--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -227,7 +227,7 @@ Key Improvements:
 * **Attributes and Inheritance:** Elements can inherit attributes and children from other specified elements using the extends property in the Custom Element Spec.
 * **Attribute and Children Specifications:** The Custom Element Spec includes properties such as attributes and children, enabling precise customization of element behavior.
 
-For more information and details for `addCustomElements` see xref:content-filtering.adoc#improved_custom_elements.adoc[improved_custom_elements].
+For more information and details for `addCustomElements` see xref:content-filtering.adoc#improved-custom-elements[improved_custom_elements].
 
 [[additions]]
 == Additions
