--- a/modules/ROOT/partials/misc/advcode-shortcuts.adoc
+++ b/modules/ROOT/partials/misc/advcode-shortcuts.adoc
@@ -11,6 +11,8 @@ Enhanced Code Editor provides the following shortcuts within the code dialog.
 | Find Next | F3 | F3
 | Find Previous | Shift+F3 | Shift+F3
 | Close Search Panel | Esc | Esc
+| Indent Code | Ctrl+] | Command+]
+| Outdent Code | Ctrl+[ | Command+[
 | Fold Code | Ctrl-Shift-[ | Command-Option-[
 | Unfold Code | Ctrl-Shift-] | Command-Option-]
 | Fold All | Ctrl-Alt-[ | Ctrl-Option-[
