--- a/modules/ROOT/partials/commands/exportword-cmds.adoc
+++ b/modules/ROOT/partials/commands/exportword-cmds.adoc
@@ -2,7 +2,7 @@
 |===
 |Command         |Description
 
-|exportWord   |Generates word file from calling `editor.getContent()` and exports it to new file `document.docx`.
+|ExportWord   |Generates word file from calling `editor.getContent()` and exports it to new file `document.docx`.
 |===
 
 .Examples
