--- a/modules/ROOT/partials/commands/exportword-cmds.adoc
+++ b/modules/ROOT/partials/commands/exportword-cmds.adoc
@@ -8,5 +8,5 @@
 .Examples
 [source,js]
 ----
-tinymce.activeEditor.execCommand('exportWord');
+tinymce.activeEditor.execCommand('ExportWord');
 ----
